# shovelog

./: .gitignore  README.md  alembic.ini  app.py  pyproject.toml
.github/: dependabot.yaml
api/users/: models.py  routers.py  schemas.py
config/: db.py  settings.py
migrations/: env.py
migrations/versions/: 43bbce4a8dd0_create_user_table.py  605f336c8787_create_user_table.py
