[tool.poetry]
name = "shovelog-backend"
version = "0.1.0"
description = ""
authors = ["tgoddessana <twicegoddessana1229@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { extras = ["all"], version = "^0.104.1" }
uvicorn = { extras = ["standard"], version = "^0.24.0.post1" }
alembic = "^1.13.0"
greenlet = "^3.0.2"
sqlalchemy = "^2.0.23"


[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"


[tool.poetry.group.development.dependencies]
ipython = "^8.18.1"

[tool.mypy]
strict = true

[tool.ruff]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    "UP", # pyupgrade
]


[tool.ruff.pyupgrade]
keep-runtime-typing = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
